Add memory cost utils

--- a/lib/evmone/CMakeLists.txt
+++ b/lib/evmone/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(evmone
     execution.cpp
     execution.hpp
     instructions.cpp
+    memory_cost.hpp
 )
 target_link_libraries(evmone PUBLIC evmc::evmc intx::intx PRIVATE evmc::instructions ethash::keccak)
 target_include_directories(evmone PUBLIC
