--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "evmc"]
 	path = evmc
 	url = https://github.com/ethereum/evmc
+[submodule "ethash"]
+	path = ethash
+	url = https://github.com/chfast/ethash
+[submodule "intx"]
+	path = intx
+	url = https://github.com/chfast/intx
