Compile source code to wasm

--- a/lib/evmone/CMakeLists.txt
+++ b/lib/evmone/CMakeLists.txt
@@ -1,7 +1,7 @@
 # evmone: Fast Ethereum Virtual Machine implementation
 # Copyright 2019 Pawel Bylica.
 # Licensed under the Apache License, Version 2.0.
-
+if (EOSIOLIB_NATIVE)
 include(LibraryTools)
 
 hunter_add_package(intx)
@@ -20,23 +20,24 @@ add_library(evmone SHARED
     limits.hpp
     opcodes_helpers.h
     ${CMAKE_SOURCE_DIR}/test/utils/utils.cpp
-    ${CMAKE_SOURCE_DIR}/../secp256k1/src/secp256k1.c
-    ${CMAKE_SOURCE_DIR}/../ethash-0.4.4/lib/ethash/ethash.cpp
-    ${CMAKE_SOURCE_DIR}/../ethash-0.4.4/lib/ethash/managed.cpp
-    ${CMAKE_SOURCE_DIR}/../ethash-0.4.4/lib/ethash/keccak.c
-    ${CMAKE_SOURCE_DIR}/../ethash-0.4.4/lib/ethash/keccakf800.c
-    ${CMAKE_SOURCE_DIR}/../ethash-0.4.4/lib/ethash/keccakf1600.c
-    ${CMAKE_SOURCE_DIR}/../ethash-0.4.4/lib/ethash/primes.c
-    ${CMAKE_SOURCE_DIR}/../ethash-0.4.4/lib/ethash/progpow.cpp
+    ${CMAKE_SOURCE_DIR}/secp256k1/src/secp256k1.c
+    ${CMAKE_SOURCE_DIR}/ethash/lib/ethash/ethash.cpp
+    ${CMAKE_SOURCE_DIR}/ethash/lib/ethash/managed.cpp
+    ${CMAKE_SOURCE_DIR}/ethash/lib/keccak/keccak.c
+    ${CMAKE_SOURCE_DIR}/ethash/lib/keccak/keccakf800.c
+    ${CMAKE_SOURCE_DIR}/ethash/lib/keccak/keccakf1600.c
+    ${CMAKE_SOURCE_DIR}/ethash/lib/ethash/primes.c
+    ${CMAKE_SOURCE_DIR}/ethash/lib/ethash/progpow.cpp
 )
 
 target_link_libraries(evmone PUBLIC evmc::evmc PRIVATE intx::intx ethash::keccak ${EOSIOLIB_NATIVE} ${ETH_ACCOUNT_NATIVE})
 target_include_directories(evmone PUBLIC
     ${CMAKE_SOURCE_DIR}
-    ${CMAKE_SOURCE_DIR}/..
-    ${CMAKE_SOURCE_DIR}/../secp256k1/src
-    ${CMAKE_SOURCE_DIR}/../secp256k1
-    ${CMAKE_SOURCE_DIR}/../secp256k1/include
+    ${CMAKE_SOURCE_DIR}
+    ${CMAKE_SOURCE_DIR}/secp256k1/src
+    ${CMAKE_SOURCE_DIR}/secp256k1
+    ${CMAKE_SOURCE_DIR}/secp256k1/include
+    ${CMAKE_SOURCE_DIR}/ethash/include
     ${EOSIO_SOURCE_DIR}/externals/aleth/evm4eos
     ${EOSIOLIB_DIR}
     $<BUILD_INTERFACE:${include_dir}>$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
@@ -61,3 +62,59 @@ endif()
 set_source_files_properties(evmone.cpp PROPERTIES COMPILE_DEFINITIONS PROJECT_VERSION="${PROJECT_VERSION}")
 
 add_standalone_library(evmone)
+
+
+else()
+
+set(EOSIO_WASM_OLD_BEHAVIOR "Off")
+find_package( eosio.cdt REQUIRED )
+
+add_contract(evmone evmone 
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethereum_vm/eth_account.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethereum_vm/eth_account.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethereum_vm/ethereum_vm.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../include/evmone/evmone.h
+    analysis.cpp
+    analysis.hpp
+    evmone.cpp
+    execution.cpp
+    execution.hpp
+    instructions.cpp
+    limits.hpp
+    opcodes_helpers.h
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../test/utils/utils.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../intx/lib/intx/div.cpp    
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../secp256k1/src/secp256k1.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethash/lib/ethash/ethash.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethash/lib/ethash/managed.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethash/lib/keccak/keccak.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethash/lib/keccak/keccakf800.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethash/lib/keccak/keccakf1600.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethash/lib/ethash/primes.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethash/lib/ethash/progpow.cpp
+)
+
+#target_link_libraries(evmone PUBLIC evmc::evmc PRIVATE intx::intx ethash::keccak ${EOSIOLIB_NATIVE} ${ETH_ACCOUNT_NATIVE})
+target_include_directories(evmone PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/../..
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethereum_vm
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../evmc/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../include
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../intx/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../secp256k1/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../secp256k1
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../secp256k1/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethash/include
+)
+
+set(COMMON_COMPILE_FLAGS ENABLE_MODULE_RECOVERY ENABLE_MODULE_ECDH USE_ECMULT_STATIC_PRECOMPUTATION USE_FIELD_INV_BUILTIN USE_NUM_NONE USE_SCALAR_INV_BUILTIN)
+set(COMPILE_FLAGS USE_FIELD_5X52 USE_SCALAR_4X64 HAVE_BUILTIN_EXPECT HAVE___INT128)
+target_compile_definitions(evmone PRIVATE -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
+
+set_target_properties(evmone
+   PROPERTIES
+   RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
+
+endif()
