--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@
 
 cmake_minimum_required(VERSION 3.10)
 
-if(NOT EXISTS ${CMAKE_SOURCE_DIR}/evmc/.git)
-    message(FATAL_ERROR "Git submodules not initialized, execute:\n  git submodule update --init")
-endif()
+# if(NOT EXISTS ${CMAKE_SOURCE_DIR}/evmc/.git)
+#     message(FATAL_ERROR "Git submodules not initialized, execute:\n  git submodule update --init")
+# endif()
 
 option(BUILD_SHARED_LIBS "Build evmone as a shared library" OFF)
 option(EVMONE_TESTING "Build tests and test tools" OFF)
