test for intrinsic evm_execute

--- a/lib/evmone/CMakeLists.txt
+++ b/lib/evmone/CMakeLists.txt
@@ -171,4 +171,23 @@ set(COMMON_COMPILE_FLAGS ENABLE_MODULE_RECOVERY ENABLE_MODULE_ECDH USE_ECMULT_ST
 set(COMPILE_FLAGS USE_FIELD_5X52 USE_SCALAR_4X64 HAVE_BUILTIN_EXPECT HAVE___INT128)
 target_compile_definitions(evmtest PRIVATE -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
 
+
+add_contract(evmtest2 evmtest2
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethereum_vm/eth_account.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethereum_vm/eth_account.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../ethereum_vm/evmtest.cpp
+    evmone4eosio_test.cpp
+    ${COMMON_SRC}
+)
+
+#target_link_libraries(evmone PUBLIC evmc::evmc PRIVATE intx::intx ethash::keccak ${EOSIOLIB_NATIVE} ${ETH_ACCOUNT_NATIVE})
+target_include_directories(evmtest2 PUBLIC
+    ${EVM_INCLUDES}
+)
+
+#-DUSE_INTRINSIC_EVM_EXECUTE
+set(COMMON_COMPILE_FLAGS ENABLE_MODULE_RECOVERY ENABLE_MODULE_ECDH USE_ECMULT_STATIC_PRECOMPUTATION USE_FIELD_INV_BUILTIN USE_NUM_NONE USE_SCALAR_INV_BUILTIN)
+set(COMPILE_FLAGS USE_FIELD_5X52 USE_SCALAR_4X64 HAVE_BUILTIN_EXPECT HAVE___INT128)
+target_compile_definitions(evmtest2 PRIVATE -DUSE_INTRINSIC_EVM_EXECUTE -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
+
 endif()
