Change eth balance type from std::array<uint8_t, 32> to asset for satisfy to challenge rules

--- a/lib/evmone/CMakeLists.txt
+++ b/lib/evmone/CMakeLists.txt
@@ -151,6 +151,7 @@ set(COMPILE_FLAGS USE_FIELD_5X52 USE_SCALAR_4X64 HAVE_BUILTIN_EXPECT HAVE___INT1
 target_compile_definitions(ethereum_vm PRIVATE -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
 
 configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/../../ethereum_vm/ethereum_vm.abi ${CMAKE_CURRENT_BINARY_DIR}/ethereum_vm.abi @COPYONLY )
+configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/../../ethereum_vm/evmtest.abi ${CMAKE_CURRENT_BINARY_DIR}/evmtest.abi @COPYONLY )
 
 
 add_contract(evmtest evmtest
@@ -169,7 +170,7 @@ target_include_directories(evmtest PUBLIC
 #-DUSE_INTRINSIC_EVM_EXECUTE
 set(COMMON_COMPILE_FLAGS ENABLE_MODULE_RECOVERY ENABLE_MODULE_ECDH USE_ECMULT_STATIC_PRECOMPUTATION USE_FIELD_INV_BUILTIN USE_NUM_NONE USE_SCALAR_INV_BUILTIN)
 set(COMPILE_FLAGS USE_FIELD_5X52 USE_SCALAR_4X64 HAVE_BUILTIN_EXPECT HAVE___INT128)
-target_compile_definitions(evmtest PRIVATE -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
+target_compile_definitions(evmtest PRIVATE -DETH_BALANCE_256BIT -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
 
 
 add_contract(evmtest2 evmtest2
@@ -188,6 +189,6 @@ target_include_directories(evmtest2 PUBLIC
 #-DUSE_INTRINSIC_EVM_EXECUTE
 set(COMMON_COMPILE_FLAGS ENABLE_MODULE_RECOVERY ENABLE_MODULE_ECDH USE_ECMULT_STATIC_PRECOMPUTATION USE_FIELD_INV_BUILTIN USE_NUM_NONE USE_SCALAR_INV_BUILTIN)
 set(COMPILE_FLAGS USE_FIELD_5X52 USE_SCALAR_4X64 HAVE_BUILTIN_EXPECT HAVE___INT128)
-target_compile_definitions(evmtest2 PRIVATE -DUSE_INTRINSIC_EVM_EXECUTE -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
+target_compile_definitions(evmtest2 PRIVATE -DETH_BALANCE_256BIT -DUSE_INTRINSIC_EVM_EXECUTE -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
 
 endif()
