set stack size to 16384

--- a/lib/evmone/CMakeLists.txt
+++ b/lib/evmone/CMakeLists.txt
@@ -191,4 +191,8 @@ set(COMMON_COMPILE_FLAGS ENABLE_MODULE_RECOVERY ENABLE_MODULE_ECDH USE_ECMULT_ST
 set(COMPILE_FLAGS USE_FIELD_5X52 USE_SCALAR_4X64 HAVE_BUILTIN_EXPECT HAVE___INT128)
 target_compile_definitions(evmtest2 PRIVATE -DETH_BALANCE_256BIT -DUSE_INTRINSIC_EVM_EXECUTE -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
 
+set_property(TARGET ethereum_vm APPEND_STRING PROPERTY LINK_FLAGS "-stack-size=16384")
+set_property(TARGET evmtest APPEND_STRING PROPERTY LINK_FLAGS "-stack-size=16384")
+set_property(TARGET evmtest2 APPEND_STRING PROPERTY LINK_FLAGS "-stack-size=16384")
+
 endif()
