ETH_BALANCE_256BIT --> EVM_FOR_PASS_VMTESTS

--- a/lib/evmone/CMakeLists.txt
+++ b/lib/evmone/CMakeLists.txt
@@ -170,7 +170,7 @@ target_include_directories(evmtest PUBLIC
 #-DUSE_INTRINSIC_EVM_EXECUTE
 set(COMMON_COMPILE_FLAGS ENABLE_MODULE_RECOVERY ENABLE_MODULE_ECDH USE_ECMULT_STATIC_PRECOMPUTATION USE_FIELD_INV_BUILTIN USE_NUM_NONE USE_SCALAR_INV_BUILTIN)
 set(COMPILE_FLAGS USE_FIELD_5X52 USE_SCALAR_4X64 HAVE_BUILTIN_EXPECT HAVE___INT128)
-target_compile_definitions(evmtest PRIVATE -DETH_BALANCE_256BIT -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
+target_compile_definitions(evmtest PRIVATE -DEVM_FOR_PASS_VMTESTS -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
 
 
 add_contract(evmtest2 evmtest2
@@ -189,7 +189,7 @@ target_include_directories(evmtest2 PUBLIC
 #-DUSE_INTRINSIC_EVM_EXECUTE
 set(COMMON_COMPILE_FLAGS ENABLE_MODULE_RECOVERY ENABLE_MODULE_ECDH USE_ECMULT_STATIC_PRECOMPUTATION USE_FIELD_INV_BUILTIN USE_NUM_NONE USE_SCALAR_INV_BUILTIN)
 set(COMPILE_FLAGS USE_FIELD_5X52 USE_SCALAR_4X64 HAVE_BUILTIN_EXPECT HAVE___INT128)
-target_compile_definitions(evmtest2 PRIVATE -DETH_BALANCE_256BIT -DUSE_INTRINSIC_EVM_EXECUTE -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
+target_compile_definitions(evmtest2 PRIVATE -DEVM_FOR_PASS_VMTESTS -DUSE_INTRINSIC_EVM_EXECUTE -D__WASM ${COMMON_COMPILE_FLAGS} ${COMPILE_FLAGS})
 
 set_property(TARGET ethereum_vm APPEND_STRING PROPERTY LINK_FLAGS "-stack-size=18432")
 set_property(TARGET evmtest APPEND_STRING PROPERTY LINK_FLAGS "-stack-size=18432")
